<resources>
    <string name="app_name">APP_Restaurante</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">My Restaurant APP</string>
    <string name="hello_explore_your_dream_food">hello explore your dream food</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_food">Add Food</string>
    <string name="nombre_del_plato">Nombre del plato</string>
    <string name="descripcion_del_plato">Descripcion del plato</string>
    <string name="price">price</string>
    <string name="category">category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar_comida">Editar comida</string>
    <string name="rating">Rating</string>
    <string name="guardar_valoraci_n">guardar valoración</string>
    <string name="valoraci_n_del_restaurante">Valoración del restaurante</string>
</resources>