<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FoodInformationActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/foreground_design"
            android:scaleType="centerCrop"
            android:src="@drawable/bg2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-76dp" />

        <EditText
            android:id="@+id/name_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="115dp"
            android:fontFamily="@font/lobster"
            android:text="@string/add_food"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="33sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="112dp" />

        <EditText
            android:id="@+id/description_food"
            android:layout_width="281dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="57dp"
            android:layout_marginTop="222dp"
            android:drawablePadding="13dp"
            android:hint="@string/nombre_del_plato"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="230dp" />


        <EditText
            android:id="@+id/price_food"
            android:layout_width="281dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="291dp"
            android:drawablePadding="13dp"
            android:hint="@string/descripcion_del_plato"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="MissingConstraints,TextFields"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="302dp" />

        <Button
            android:id="@+id/edit_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="142dp"
            android:layout_marginTop="541dp"
            android:layout_marginBottom="70dp"
            android:onClick="edit_food"
            android:text="@string/editar_comida"
            tools:ignore="MissingConstraints,OnClick,UsingOnClickInXml"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="557dp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>